# logikit

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/logisim-figures/: SKILL.md
.github/workflows/: ci.yml
examples/: breadboard.py  circuits.py
logikit/: __init__.py  __main__.py  _env.py  check.py  circ.py  cli.py  doctor.py  sim.py  wiring.py
render/: LogiRender.java  render.sh
tests/: __init__.py  test_check.py  test_circ.py  test_cli.py  test_conflicts.py  test_format.py  test_sim.py  test_wiring.py
